--- a/notebooks/agentchat_structured_outputs.mdx
+++ b/notebooks/agentchat_structured_outputs.mdx
@@ -36,6 +36,12 @@ For more information, please refer to the [installation guide](/docs/installatio
 </div>
 
 
+### Supported clients
+
+AG2 has structured output support for following client providers: -
+OpenAI (`openai`) - Anthropic (`anthropic`) - Google Gemini (`google`) -
+Ollama (`ollama`)
+
 ## Set your API Endpoint
 
 The
@@ -53,11 +59,6 @@ config_list = autogen.config_list_from_json(
         "model": ["gpt-4o", "gpt-4o-mini"],
     },
 )
-```
-
-``` text
-/usr/local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html
-  from .autonotebook import tqdm as notebook_tqdm
 ```
 
 
@@ -138,23 +139,6 @@ equation using a step-by-step `MathReasoning` model.
 user_proxy.initiate_chat(assistant, message="how can I solve 8x + 7 = -23", max_turns=1, summary_method="last_msg")
 ```
 
-``` text
-User_proxy (to Math_solver):
-
-how can I solve 8x + 7 = -23
-
---------------------------------------------------------------------------------
-Math_solver (to User_proxy):
-
-{"steps":[{"explanation":"To isolate the term with x, we first subtract 7 from both sides of the equation.","output":"8x + 7 - 7 = -23 - 7 -> 8x = -30."},{"explanation":"Now that we have 8x = -30, we divide both sides by 8 to solve for x.","output":"x = -30 / 8 -> x = -3.75."}],"final_answer":"x = -3.75"}
-
---------------------------------------------------------------------------------
-```
-
-``` text
-ChatResult(chat_id=None, chat_history=[{'content': 'how can I solve 8x + 7 = -23', 'role': 'assistant', 'name': 'User_proxy'}, {'content': '{"steps":[{"explanation":"To isolate the term with x, we first subtract 7 from both sides of the equation.","output":"8x + 7 - 7 = -23 - 7 -> 8x = -30."},{"explanation":"Now that we have 8x = -30, we divide both sides by 8 to solve for x.","output":"x = -30 / 8 -> x = -3.75."}],"final_answer":"x = -3.75"}', 'role': 'user', 'name': 'Math_solver'}], summary='{"steps":[{"explanation":"To isolate the term with x, we first subtract 7 from both sides of the equation.","output":"8x + 7 - 7 = -23 - 7 -> 8x = -30."},{"explanation":"Now that we have 8x = -30, we divide both sides by 8 to solve for x.","output":"x = -30 / 8 -> x = -3.75."}],"final_answer":"x = -3.75"}', cost={'usage_including_cached_inference': {'total_cost': 0.00015089999999999998, 'gpt-4o-mini-2024-07-18': {'cost': 0.00015089999999999998, 'prompt_tokens': 582, 'completion_tokens': 106, 'total_tokens': 688}}, 'usage_excluding_cached_inference': {'total_cost': 0}}, human_input=[])
-```
-
 ## Formatting a response
 
 When defining a `response_format`, you have the flexibility to customize
@@ -217,59 +201,17 @@ assistant = autogen.AssistantAgent(
 user_proxy.initiate_chat(assistant, message="how can I solve 8x + 7 = -23", max_turns=1, summary_method="last_msg")
 ```
 
-``` text
-User_proxy (to Math_solver):
-
-how can I solve 8x + 7 = -23
-
---------------------------------------------------------------------------------
-Math_solver (to User_proxy):
-
-Step 1: To isolate the term with x, we first subtract 7 from both sides of the equation.
-  Output: 8x + 7 - 7 = -23 - 7 -> 8x = -30.
-Step 2: Now that we have 8x = -30, we divide both sides by 8 to solve for x.
-  Output: x = -30 / 8 -> x = -3.75.
-
-Final Answer: x = -3.75
-
---------------------------------------------------------------------------------
-```
-
-``` text
-ChatResult(chat_id=None, chat_history=[{'content': 'how can I solve 8x + 7 = -23', 'role': 'assistant', 'name': 'User_proxy'}, {'content': 'Step 1: To isolate the term with x, we first subtract 7 from both sides of the equation.\n  Output: 8x + 7 - 7 = -23 - 7 -> 8x = -30.\nStep 2: Now that we have 8x = -30, we divide both sides by 8 to solve for x.\n  Output: x = -30 / 8 -> x = -3.75.\n\nFinal Answer: x = -3.75', 'role': 'user', 'name': 'Math_solver'}], summary='Step 1: To isolate the term with x, we first subtract 7 from both sides of the equation.\n  Output: 8x + 7 - 7 = -23 - 7 -> 8x = -30.\nStep 2: Now that we have 8x = -30, we divide both sides by 8 to solve for x.\n  Output: x = -30 / 8 -> x = -3.75.\n\nFinal Answer: x = -3.75', cost={'usage_including_cached_inference': {'total_cost': 0.00015089999999999998, 'gpt-4o-mini-2024-07-18': {'cost': 0.00015089999999999998, 'prompt_tokens': 582, 'completion_tokens': 106, 'total_tokens': 688}}, 'usage_excluding_cached_inference': {'total_cost': 0}}, human_input=[])
-```
-
 Normal function calling still works alongside structured output, so your
 agent can have a response format while still calling tools.
 
 ```python
-@assistant.register_for_execution()
+@user_proxy.register_for_execution()
 @assistant.register_for_llm(description="You can use this function call to solve addition")
 def add(x: int, y: int) -> int:
     return x + y
 
 
 user_proxy.initiate_chat(
-    assistant, message="solve 3 + 4 by calling appropriate function", max_turns=1, summary_method="last_msg"
+    assistant, message="solve 3 + 4 by calling appropriate function", max_turns=2, summary_method="last_msg"
 )
-```
-
-``` text
-User_proxy (to Math_solver):
-
-solve 3 + 4 by calling appropriate function
-
---------------------------------------------------------------------------------
-Math_solver (to User_proxy):
-
-***** Suggested tool call (call_oTp96rVzs2kAOwGhBM5rJDcW): add *****
-Arguments: 
-{"x":3,"y":4}
-********************************************************************
-
---------------------------------------------------------------------------------
-```
-
-``` text
-ChatResult(chat_id=None, chat_history=[{'content': 'solve 3 + 4 by calling appropriate function', 'role': 'assistant', 'name': 'User_proxy'}, {'tool_calls': [{'id': 'call_oTp96rVzs2kAOwGhBM5rJDcW', 'function': {'arguments': '{"x":3,"y":4}', 'name': 'add'}, 'type': 'function'}], 'content': None, 'role': 'assistant'}], summary='', cost={'usage_including_cached_inference': {'total_cost': 0.0001029, 'gpt-4o-mini-2024-07-18': {'cost': 0.0001029, 'prompt_tokens': 618, 'completion_tokens': 17, 'total_tokens': 635}}, 'usage_excluding_cached_inference': {'total_cost': 0}}, human_input=[])
 ```
