deploy: 869a267c2526dcc59e4ed91c21a03be912f2cc89

--- a/snippets/data/NotebooksMetadata.mdx
+++ b/snippets/data/NotebooksMetadata.mdx
@@ -647,6 +647,16 @@ export const notebooksMetadata = [
         "source": "/notebook/agentchat_agentoptimizer.ipynb"
     },
     {
+        "title": "Using RetrieveChat Powered by Couchbase Capella for Retrieve Augmented Code Generation and Question Answering",
+        "link": "/docs/use-cases/notebooks/notebooks/agentchat_RetrieveChat_couchbase",
+        "description": "Explore the use of AutoGen's RetrieveChat for tasks like code generation from docstrings, answering complex questions with human feedback, and exploiting features like Update Context, custom prompts, and few-shot learning.",
+        "image": null,
+        "tags": [
+            "RAG"
+        ],
+        "source": "/notebook/agentchat_RetrieveChat_couchbase.ipynb"
+    },
+    {
         "title": "Agent Observability with OpenLIT",
         "link": "/docs/use-cases/notebooks/notebooks/agentchat_openlit",
         "description": "Use OpenLIT to easily monitor AI agents in production with OpenTelemetry.",
