--- a/docs/api-reference/autogen/oai/gemini/GeminiLLMConfigEntry.mdx
+++ b/docs/api-reference/autogen/oai/gemini/GeminiLLMConfigEntry.mdx
@@ -11,7 +11,8 @@ title: autogen.oai.gemini.GeminiLLMConfigEntry
 GeminiLLMConfigEntry(**data: Any)
 ```
 
-    Usage docs: https://docs.pydantic.dev/2.10/concepts/models/
+    !!! abstract "Usage Documentation"
+        [Models](/docs/api-reference/autogen/oai/concepts/models)
     
     A base class for creating Pydantic models.<br/>
 
@@ -76,6 +77,12 @@ GeminiLLMConfigEntry(**data: Any)
 
     <br />
 
+<code class="doc-symbol doc-symbol-heading doc-symbol-attribute"></code>
+#### tool_config
+<br />
+
+    <br />
+
 ### Instance Methods
 
 <code class="doc-symbol doc-symbol-heading doc-symbol-method"></code>
@@ -101,7 +108,8 @@ model_dump(
 ) -> dict[str, Any]
 ```
 
-    Usage docs: https://docs.pydantic.dev/2.10/concepts/serialization/#modelmodel_dump
+    !!! abstract "Usage Documentation"
+        [`model_dump`](/docs/api-reference/autogen/oai/concepts/serialization#modelmodel_dump)
     
     Generate a dictionary representation of the model, optionally specifying which fields to include or exclude.<br/>
 
@@ -131,7 +139,8 @@ model_dump_json(
 ) -> str
 ```
 
-    Usage docs: https://docs.pydantic.dev/2.10/concepts/serialization/#modelmodel_dump_json
+    !!! abstract "Usage Documentation"
+        [`model_dump_json`](/docs/api-reference/autogen/oai/concepts/serialization#modelmodel_dump_json)
     
     Generates a JSON representation of the model using Pydantic's `to_json` method.<br/>
 
